🔻🪙 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Select ONE Additional
       <div>
         <h2 id="start">How it started.</h2>
         <img
-          class="pic" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c7/Chill_guy_original_artwork.jpg/220px-Chill_guy_original_artwork.jpg"
+          class="pic" src="https://tr.rbxcdn.com/30DAY-DynamicHeadCostume-10925CBED387C9A9A7C8ADAB2E889647-Png/420/420/DynamicHeadCostume/Png/noFilter"
         />
       </div>
       <div>
